k8s/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: greatkart
spec:
  type: NodePort
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 32404
